// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.access;

import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.internal.access";
option java_multiple_files = true;
option java_outer_classname = "RoleProto";

message Role {
  string role_resource_id = 1;

  // Set of resource types that this `Role` can be granted on.
  repeated string resource_types = 2;

  // Set of resource IDs of permissions granted by this role.
  repeated string permission_resource_ids = 3;

  // Entity tag.
  string etag = 4;

  // Create time. Output-only.
  google.protobuf.Timestamp create_time = 5;

  // Update time. Output-only.
  google.protobuf.Timestamp update_time = 6;
}
